fix login form spacing

--- a/web/src/views/Login/Login.module.scss
+++ b/web/src/views/Login/Login.module.scss
@@ -14,6 +14,10 @@
     }
   }
 
+  .input {
+    margin-bottom: 1rem;
+  }
+
   .loginError {
     color: red;
   }
